--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -1,4 +1,12 @@
 {
+    "Commissions and Personal":{
+        "HypnosisSoft - Game (PV) (TBA)":"https://x.com/hypnosissoft/status/1803133436623986990",
+        "Commission - Stratera Youtube Intro":"https://www.youtube.com/watch?v=SU9tRkYD_vE",
+        "Commission - Gibes Youtube Intro":"https://www.youtube.com/watch?v=MRIpPvY7-JQ",
+        "Comission - Bull Transformation":"https://www.youtube.com/watch?v=9ifBDyVCeAY",
+        "Collab - Beast Rising":"https://www.youtube.com/watch?v=QMRCFCVoNao",
+        "Collab - Road to El Dorado":"https://www.youtube.com/watch?v=C_CuRekPF4k"
+        },
     "Studio WIT":{
         "Yaiba:Samurai Legend (E10)":"TBA"
         },
@@ -55,9 +63,6 @@
         "Iklan Mie Sedap":"---",
         "Yellow Claw - Amsterdamned (MV)":"https://www.youtube.com/watch?v=NtYPh5Lh9HA",
         "Arus Merah (MV)":"https://www.youtube.com/watch?v=OMd0sFVKvUI"
-        },
-    "HypnosisSoft":{
-        "Game (PV)(TBA)":"https://x.com/hypnosissoft/status/1803133436623986990"
         },
     "Cuatrodia Creative":{
         "Iklan Go Pay":"---"
