--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -58,7 +58,7 @@
         },
 
     "Portside Studios":{
-        "Port by the sea":"https://www.youtube.com/watch?v=eH-ujKvm4Pc"
+        "Port by the sea":"https://www.youtube.com/watch?v=F5yHNCQYEAY"
         },
     "Tampar Production":{
         "Movie":"TBA",
