--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -53,8 +53,8 @@
     "Studio WIT":{
         "Yaiba:Samurai Legend (E10)(LO)":
         {
-        "link":"TBA",
-        "color":"#500000"
+        "link":"https://www.youtube.com/watch?v=nTF6QBu7vMA",
+        "color":""
         }
         },
     "Studio MAF":{
