--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -90,16 +90,16 @@
 
         },
     "Studio Yotta":{
-        "Game (PV)" :
+        "Cartoon (PV)🪰" :
         {
         "link":"TBA",
         "color":"#500000"
         },
 
-        "Cartoon (PV)🪰" :
+        "The Battle Cats x Sonic (PV)" :
         {
-        "link":"TBA",
-        "color":"#500000"
+        "link":"https://www.youtube.com/watch?v=C-7V-dB5ly0",
+        "color":"#1f3e53"
         },
 
         "Digimon Ghost Game (S1:E3 & S1:E9)":
@@ -245,20 +245,20 @@
         }
         },
     "Tampar Production":{
-        "Tinggal Meninggal (2D Animations)":
+        "Tinggal Meninggal (Animated Ninja Cat!)":
         {
-        "link":"https://www.youtube.com/watch?v=K3jH6Wb3WNM",
-        "color":"#500000"
+        "link":"https://youtu.be/Z_G2cU5-vSk?t=104",
+        "color":"#1f3e53"
         },
         "Wanara Teaser":
         {
         "link":"TBA",
         "color":"#500000"
         },
-        "Iklan Mie Sedap (PV)(FX Only)":
+        "Iklan Mie Sedap (Animated the noodles)":
         {
-        "link":"...",
-        "color":"#500000"
+        "link":"https://youtu.be/ViYURHZlNSc?si=c3zMmDNXG2JxlRDL",
+        "color":"#1f3e53"
         },
         "Yellow Claw - Amsterdamned (MV)":
         {
@@ -273,10 +273,10 @@
 
         },
     "Cuatrodia Creative":{
-        "Iklan Go Pay":
+        "Iklan Go Pay (Only animated that one horse dancing)":
         {
-        "link":"...",
-        "color":"#500000"
+        "link":"https://www.youtube.com/watch?v=kIRsFMsnoNY",
+        "color":"#1f3e53"
         }
         },
     "Zettai Absolute":{
