--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -245,7 +245,7 @@
         }
         },
     "Tampar Production":{
-        "Tinggal Meninggal (Animated Ninja Cat!)":
+        "Tinggal Meninggal (Animated Ninja Cat)":
         {
         "link":"https://youtu.be/Z_G2cU5-vSk?t=104",
         "color":"#1f3e53"
