--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -51,21 +51,21 @@
         }
         },
     "J.C.Staff":{
-        "Anime (LO)":
+        "One-Punch man S3 (LO)":
         {
         "link":"TBA",
         "color":"#500000"
         }
         },
     "E&H Production":{
-        "Anime (LO)":
+        "Rayearth (LO)":
         {
         "link":"TBA",
         "color":"#500000"
         }
         },
     "Studio MAF":{
-        "Anime (LO)":
+        "Ganglion (LO)":
         {
         "link":"TBA",
         "color":"#500000"
@@ -201,7 +201,7 @@
 
         "Smiling Friends (S2:E3 & S2:E4)" :
         {
-        "link":"https://www.youtube.com/watch?v=DudZFZ2n9iI",
+        "link":"https://www.youtube.com/watch?v=00_sb0h2mRQ",
         "color":""
         },
 
