--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -1,6 +1,6 @@
 {
     "Commissions and Personal":{
-        "Comission - Bull Transformation":
+        "Commission - Bull Transformation":
         {
         "link":"https://www.youtube.com/watch?v=9ifBDyVCeAY",
         "color":""
