--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -39,7 +39,7 @@
         "HypnosisSoft - Game (PV)":
         {
         "link":"https://x.com/hypnosissoft/status/1803133436623986990",
-        "color":"red"
+        "color":"orange"
         }
     },
 
@@ -47,28 +47,28 @@
         "Cartoon (PV)":
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         }
         },
     "J.C.Staff":{
         "One-Punch man S3 (LO)":
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         }
         },
     "E&H Production":{
         "Anime (LO)":
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         }
         },
     "Studio MAF":{
         "Ganglion (LO)":
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         }
         },
     "Studio WIT":{
@@ -106,13 +106,13 @@
         "Cartoon (PV)🪰" :
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         },
 
         "The Battle Cats x Sonic (PV)(Animated 0:14, 0:21, 0:22, 0:37)" :
         {
         "link":"https://www.youtube.com/watch?v=C-7V-dB5ly0",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
 
         "Digimon Ghost Game (S1:E3 & S1:E9)":
@@ -178,7 +178,7 @@
         "Starlight Re:Volvers (PV)":
         {
         "link":"https://www.youtube.com/watch?v=o8WkNXMExSw",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
 
         "Inkbound (PV)":
@@ -190,13 +190,13 @@
         "Grotto Beasts (PV)(Animated 1:32, 1:33(That Dinosaur running only))":
         {
         "link":"https://www.youtube.com/watch?v=gPm4DxaD6Wc",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
 
         "Neon White (PV)(Animated 0:25, 0:34, 0:44)":
         {
         "link":"https://www.youtube.com/watch?v=lxWmFEuE6Y0",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
 
         "Smiling Friends (S2:E3 & S2:E4)" :
@@ -208,7 +208,7 @@
         "Biggie: I Got a Story to Tell (PV)":
         {
         "link":"https://www.youtube.com/watch?v=5QBUlcajrEY",
-        "color":"lightblue"
+        "color":"lightgreen"
         }
 
         },
@@ -238,13 +238,13 @@
         "Area 21 (MV)(FX Only)":
         {
         "link":"https://www.youtube.com/watch?v=DudZFZ2n9iI",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
 
         "Agent King":
         {
         "link":"TBA",
-        "color":"red"
+        "color":"orange"
         }
 
         },
@@ -261,7 +261,7 @@
         "Tinggal Meninggal (Movie)(Animated Ninja Cat at 1:44)":
         {
         "link":"https://youtu.be/Z_G2cU5-vSk?t=104",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "Wanara Teaser":
         {
@@ -271,17 +271,17 @@
         "Iklan Mie Sedap (AD)(Animated the noodles at 0:04-0:08)":
         {
         "link":"https://youtu.be/ViYURHZlNSc?si=c3zMmDNXG2JxlRDL",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "Yellow Claw - Amsterdamned (MV)(Animated 0:43, 2:21-2:27)":
         {
         "link":"https://www.youtube.com/watch?v=NtYPh5Lh9HA",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "Arus Merah (MV)(Animated 0:26-0:31, 0:48, 1:30, 1:57-2:00)":
         {
         "link":"https://www.youtube.com/watch?v=OMd0sFVKvUI",
-        "color":"lightblue"
+        "color":"lightgreen"
         }
 
         },
@@ -289,29 +289,29 @@
         "Iklan Go Pay (AD)(Animated that one horse at 1:31)":
         {
         "link":"https://www.youtube.com/watch?v=kIRsFMsnoNY",
-        "color":"lightblue"
+        "color":"lightgreen"
         }
         },
     "Zettai Absolute":{
         "Qtp vs T1 (Animated 0:40-0:44)":
         {
         "link":"https://www.youtube.com/watch?v=J6g1kD7Yyyo",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "Ambition's Journey Parody (Animated 0:47-0:53)":
         {
         "link":"https://www.youtube.com/watch?v=QdSXrlQWTX8",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "Ryze’s 10-Year Realm Warp (Animated 1:49)":
         {
         "link":"https://www.youtube.com/watch?v=n_-kANpqetM",
-        "color":"lightblue"
+        "color":"lightgreen"
         },
         "LCS 2020 Spring Finals Opening Ceremony Community Animation (Animated 0:04-0:16)":
         {
         "link":"https://www.youtube.com/watch?v=Rkx_2Jybed4",
-        "color":"lightblue"
+        "color":"lightgreen"
         }
         }
 
