--- a/assets/json/data_projects.json
+++ b/assets/json/data_projects.json
@@ -53,8 +53,8 @@
     "J.C.Staff":{
         "One-Punch man S3 (LO)":
         {
-        "link":"TBA",
-        "color":"orange"
+        "link":"https://www.instagram.com/sadewoo0/p/DR_v7iGkzdH/",
+        "color":"yellow"
         }
         },
     "E&H Production":{
@@ -67,8 +67,8 @@
     "Studio MAF":{
         "Ganglion (LO)(Genga)":
         {
-        "link":"TBA",
-        "color":"orange"
+        "link":"https://www.instagram.com/sadewoo0/p/DR_tgEwE8k4/",
+        "color":"yellow"
         }
         },
     "Studio WIT":{
